--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body {
 width: 100%;
 height: 100%;
 margin: 0;
+background-color: #FCFFFD;
 }
 header {
   display:inline-flex;
@@ -56,6 +57,7 @@ hr {
 }
 h2 {
   font-family: 'Allerta Stencil', sans-serif;
+  text-decoration: underline;
 }
 
 .ourStory {
@@ -95,6 +97,7 @@ iframe {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  border-radius: 5px;
   height: auto;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -102,6 +105,9 @@ iframe {
 
 #tourDates {
   padding-bottom: 2rem;
+  text-transform: uppercase;
+  font-family: sans-serif;
+  font-weight: bolder;
 }
 
 footer {
@@ -123,4 +129,8 @@ h3 a {
 footer ul li a {
   font-size: 200%;
   color: black;
+}
+
+#footerTwo{
+  background:grey;
 }
