--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
 header h1 {
   width: 30%;
   font-family: 'Permanent Marker', cursive;
+  font-size: 2vw;
 }
 
 nav {
@@ -90,7 +91,13 @@ iframe {
   width: 63.6%;
   border-radius: 5px;
 }
-
+#videos {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 #tour {
   width: 63.6%;
   background-image: url(img/forest.jpg);
@@ -138,14 +145,10 @@ footer ul li a {
 
 @media only screen and (min-width: 300px) and (max-width: 767px) {
 
+  header h1 {
+   font-size: 100%;
+  }
 
-#videos{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  margin: 0 auto;
-}
 
 #videos iframe {
   height: 70%;
