--- a/style.css
+++ b/style.css
@@ -6,11 +6,77 @@ height: 100%;
 margin: 0;
 background-color: #FCFFFD;
 }
+
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+  background-color:gray;
+  display: inline-flex;
+  width: 100%;
+}
+
+#logo{
+  font-family: 'Permanent Marker', cursive;
+  font-size: 200%;
+  width: 10em;
+  border-right: 3px solid white;
+}
+
+.topnav #myLinks {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-content: flex-end;
+  width: 85%;
+  text-transform: uppercase;
+  font-family: 'Allerta Stencil', sans-serif;
+  align-items: center;
+}
+
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: inline-flex;
+}
+
+
+.topnav a.icon {
+  background: black;
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 3rem;
+  width: 3rem;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 2rem;
+}
+
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+.active {
+  background-color: black;
+  color: white;
+}
+
+
 header {
   display:inline-flex;
   background-color: gray;
   width: 97.6%;
-  padding: 0rem 1rem 1rem 1rem;
+  padding: 0rem 1rem 2rem 1rem;
   height: 3.5rem;
   color: white;
   font-family: 'Allerta Stencil', sans-serif;
@@ -19,7 +85,6 @@ header {
 header h1 {
   width: 30%;
   font-family: 'Permanent Marker', cursive;
-  font-size: 2vw;
 }
 
 nav {
@@ -27,7 +92,7 @@ nav {
   flex-direction: row;
   width: 90%;
   justify-content: flex-end;
-  align-content: flex-end;
+  align-items: baseline
 
 }
 ul li{
@@ -143,16 +208,63 @@ footer ul li a {
 }
 
 
-@media only screen and (min-width: 300px) and (max-width: 767px) {
+@media only screen and (min-width: 300px) and (max-width: 1120px) {
+
+
+
+
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+
+
+  .topnav #myLinks {
+    display: none;
+  }
+
+
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+
+
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+
+  .active {
+    background-color: black;
+    color: white;
+  }
+
+
 
   header h1 {
-   font-size: 100%;
+    font-size: 4vw;
+    margin-top: 0;
   }
 
 
 #videos iframe {
   height: 70%;
-  width: 70%;
+  width: 75%;
 }
 
 }
