--- a/style.css
+++ b/style.css
@@ -72,29 +72,6 @@ background-color: #FCFFFD;
 }
 
 
-header {
-  display:inline-flex;
-  background-color: gray;
-  width: 97.6%;
-  padding: 0rem 1rem 2rem 1rem;
-  height: 3.5rem;
-  color: white;
-  font-family: 'Allerta Stencil', sans-serif;
-}
-
-header h1 {
-  width: 30%;
-  font-family: 'Permanent Marker', cursive;
-}
-
-nav {
-  display: flex;
-  flex-direction: row;
-  width: 90%;
-  justify-content: flex-end;
-  align-items: baseline
-
-}
 ul li{
   display: inline-block;
   padding: 1rem;
@@ -204,14 +181,12 @@ footer ul li a {
 }
 
 #footerTwo{
-  background:grey;
+  background:gray;
+  color: white;
 }
 
 
 @media only screen and (min-width: 300px) and (max-width: 1120px) {
-
-
-
 
   .topnav {
     overflow: hidden;
@@ -219,6 +194,10 @@ footer ul li a {
     position: relative;
   }
 
+  #logo {
+  font-size: 350%;
+  border-right: none;
+  }
 
   .topnav #myLinks {
     display: none;
@@ -229,7 +208,7 @@ footer ul li a {
     color: white;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 4vw;
     display: block;
   }
 
@@ -240,6 +219,8 @@ footer ul li a {
     position: absolute;
     right: 0;
     top: 0;
+    height: 4rem;
+    vertical-align: middle;
   }
 
 
@@ -263,7 +244,7 @@ footer ul li a {
 
 
 #videos iframe {
-  height: 70%;
+  height: 25%;
   width: 75%;
 }
 
