--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ hr {
 .landing {
   background: url(img/landing.jpg) no-repeat 50% 50%;
   background-size: cover;
-  height: 90%;
+  height: 100%;
   width: 100%;
   margin: auto;
   top: 0;
@@ -136,6 +136,10 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  width: 63.6%;
+  background-color: gray;
+  border-radius: 5px;
+  margin: 3rem auto;
 }
 
 #tour {
