--- a/style.css
+++ b/style.css
@@ -98,6 +98,16 @@ h2 {
   text-decoration: underline;
 }
 
+#about {
+width: 63.6%;
+margin: 3rem auto;
+padding: 2rem 0;
+background: black;
+border-radius: 5px;
+color: white;
+}
+
+
 .ourStory {
   width: 75%;
   margin: 0 auto;
